# preloader-android

./: .gitignore  CMakeLists.txt  mkdocs.yml  requirements-docs.txt  xmake.lua
.github/workflows/: docs.yml  pages.yml
docs/: compatibility.md  getting-started.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: gloss.md  hook.md  input.md  memory-hook-macros.md  mod.md  patch.md  signature.md  types-and-macros.md
docs/en/: index.md
docs/en/api/: hook.md  mod.md  patch.md
docs/guide/: build.md  compatibility.md  getting-started.md
docs/zh-CN/: index.md
docs/zh-CN/api/: mod.md  patch.md
docs/zh-CN/guide/: build.md  compatibility.md  getting-started.md
include/pl/: Config.hpp  Input.hpp  Logger.hpp  Mod.hpp  ModMenu.hpp
src/pl/: Gloss.h  Hook.cpp  Hook.h  Logger.h  Mod.cpp  Mod.h  Patch.cpp  Patch.h  PreLoader.cpp  PreLoader.h  PreloaderInput.h  Signature.cpp  Signature.h
src/pl/api/: Encoding.cpp  Macro.h
src/pl/api/memory/: Hook.cpp  Hook.h  Memory.cpp  Memory.h
src/pl/c/: Macro.h  PreloaderInput.h  PreloaderModMenu.h
src/pl/cpp/: Mod.hpp  ModMenu.hpp  Patch.hpp  Signature.hpp
src/pl/cpp/mod/: Mod.hpp  RegisterHelper.hpp
src/pl/internal/: AndroidUtils.cpp  Logger.cpp  Macro.h  ModManager.cpp  ModManager.h
src/pl/legacy/: LegacyInput.h  LegacyModMenu.cpp  LegacyModMenu.h  LegacyPatch.cpp
src/pl/memory/: Hook.cpp  Patch.cpp  Vtable.cpp
src/pl/runtime/: ExternalModBridgeJni.cpp  GameHookRules.cpp  GameHooks.cpp  InputBridge.cpp  InputBridge.h  InputJni.cpp  ModMenuBridge.cpp  ModMenuBridge.h  ModMenuTypes.h
